重新整理文件夹

--- a/bootstraptest/popover.html
+++ b/bootstraptest/popover.html
@@ -13,7 +13,7 @@
 	<script src="../src/bootstrap/js/respond.min.js"></script>
 	<![endif]-->
 	<!--6、引入 bootstrap.css-->
-	<script src="../src/bootstrap/css/bootstrap.min.css"></script>
+	<link rel="stylesheet" href="../src/bootstrap/css/bootstrap.min.css">
 </head>
 <body style="padding-top: 200px">
 <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
@@ -37,10 +37,7 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 <!--5、引入 jquery，bootstrap js-->
 <script src="../src/bootstrap/js/jquery-1.11.3.js"></script>
 <script src="../src/bootstrap/js/bootstrap.min.js"></script>
-<script src="../src/bootstrap/js/bootlint.js"></script>
-<script>
-	bootlint.showLintReportForCurrentDocument([]);
-</script>
+
 <script>
 	$(function () {
 		$('[data-toggle="popover"]').popover();
