--- a/easyuitest/onunload.html
+++ b/easyuitest/onunload.html
@@ -11,7 +11,7 @@
 </head>
 <body onunload="checkLeave()">
 		<h1>this is onunload test</h1>
-		<a href="../drag.html">跳转到其他页面</a>
+		<a href="../plugintest/drag/drag_h5.html">跳转到其他页面</a>
 		<div style="margin:20px 0;">
 			<a href="#" class="easyui-linkbutton" onclick="alert1()">Alert</a>
 			<a href="#" class="easyui-linkbutton" onclick="alert2()">Error</a>
