--- a/plugintest/drag/drag_plugin.html
+++ b/plugintest/drag/drag_plugin.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<script src="../../src/drag/tuozuai.js"></script>
 </head>
 <body>
-
+<div>
+	<img src="img/test.png" id="pic" alt="" onmousewheel="onWheelZoom(this)" style="width: 200px;height: 200px;zoom: 0.7">
+</div>
 </body>
 </html>
