增加ie9使用adobe预览pdf 增加ocxlocalplay测试

--- a/ierightclick.html
+++ b/ierightclick.html
@@ -16,8 +16,7 @@
 
 	</rect>
 </svg>
-<script src="src/easyui/jquery-1.11.3.js">
-
+<script src="src/easyui/jquery.min.js">
 </script>
 <script>
 	$(".mark").bind("contextmenu", function(){
