--- a/bootstraptest/modal/modal_complex.html
+++ b/bootstraptest/modal/modal_complex.html
@@ -17,46 +17,16 @@
 
 </head>
 <body>
-  <button id="jsAddModal">动态添加模态框</button>
+<a data-url="test.html" id="signId" class="btn btn-info" target="dialog" title="请选择用餐类型">签到</a>
+
 <!--5、引入 jquery，bootstrap js-->
 <script src="../../src/bootstrap/js/jquery-1.11.3.js"></script>
 <script src="../../src/bootstrap/js/bootstrap.min.js"></script>
-
+<script src="../js/modal_comple.js"></script>
 <script>
-
-  $('#jsAddModal').click(function () {
-    if(window.confirm("你确定要xxxx？")){
-      alert('确定')
-    }
-    var val=window.prompt("What's your name?", "Default");
-    alert(val);
-    addModal("test.html","test",500,500,20,30);
-
+  $(document).on('click','#signId',function () {
+    initView();
   });
-
-  function addModal(url,iframeid,iframewidth,iframeheight,top,left) {
-    var $w = $('<div ></div>');
-    $w.attr({
-
-        width:'100%',
-      style:'position:fixed;z-index:9999;top:'+top+'%;left:'+left+'%'
-    }
-    );
-    var _iframe = $('<iframe></iframe>');
-    _iframe.attr({
-      id:iframeid,
-      src: url,
-      frameborder: 0,
-      width:iframewidth,
-      height:iframeheight,
-      scrolling: 'auto'
-    });
-    $w.append(_iframe);
-    $("body").append($w);
-  }
-
-
-
 
 </script>
 </body>
