增加意外退出情况的demo

--- a/easyuitest/onunload.html
+++ b/easyuitest/onunload.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Alert Messager - jQuery EasyUI Demo</title>
 
+	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="../src/easyui/themes/icon.css">
-	<link rel="stylesheet" type="text/css" href="../src/easyui/demo.css">
+	<link rel="stylesheet" type="text/css" href="../src/easyui/demo/demo.css">
 	<script type="text/javascript" src="../src/easyui/jquery.min.js"></script>
 	<script type="text/javascript" src="../src/easyui/jquery.easyui.min.js"></script>
 </head>
