--- a/plugintest/video/audio_k.html
+++ b/plugintest/video/audio_k.html
@@ -6,8 +6,10 @@
 	<script src="../../src/video/k-audio.js"></script>
 </head>
 <body>
-
+<audio src="src/alarmvoice.mp3"></audio>
+<!--
 <audio src="http://link.hhtjim.com/163/482988471.mp3"></audio>
+-->
 <script src="../../src/easyui/jquery.min.js"></script>
 <script>
     var a=new kac(document.getElementsByTagName("audio")[0],320,"","");
