--- a/easyuitest/interactive.html
+++ b/easyuitest/interactive.html
@@ -16,21 +16,21 @@
 		<a href="#" class="easyui-linkbutton" onclick="prompt1()">Prompt</a>
 	</div>
 	<script>
-    var MSG_UNLOAD="会议关闭异常,请留在此页?";
+    var MSG_UNLOAD="会议关闭异常,请留在此页?\n是打发斯蒂芬";
     var UnloadConfirm = {};
     //启用监听浏览器刷新、关闭的方法
     UnloadConfirm.set = function(confirm_msg){
       window.onbeforeunload = function(event){
         event = event || window.event;
         event.returnValue = confirm_msg;
-        $.messager.confirm('会议关闭', '告警会议结束异常,您确定要结束会议?', function(t){
+        /*$.messager.confirm('会议关闭', '告警会议结束异常,您确定要结束会议?', function(t){
           if (t){
             alert('confirmed: '+t);
             alert(status);
             //调结束会议的方法
           }
 
-        });
+        });*/
       }
     };
     //关闭监听浏览器刷新、关闭的方法
