--- a/plugintest/canvaspaint/paint.html
+++ b/plugintest/canvaspaint/paint.html
@@ -413,10 +413,10 @@
 
     <div id="book" style="position: relative;top: 0;left: 0;width: 100%;height: 100%">
         <canvas width="1070" height="648"></canvas>
-        <img src="Image/alarm.png" alt="" style="">
+        <img src="Image/1.jpg" alt="" style="">
     </div>
 </body>
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 <script>
     var container=$(".container");
@@ -427,7 +427,6 @@
     var height=screenHeight-15;
     canvas.width=width;
     canvas.height=height;
-
     var obj=canvas.getContext("2d");
     var typechoose=$(".type li");
     var stylechoose=$(".style li");
