1完善布局module中的利用float,padding,margin实现侧边固定中间自适应的布局

--- a/plugintest/bootstrap-table/table_basic.html
+++ b/plugintest/bootstrap-table/table_basic.html
@@ -9,9 +9,7 @@
 	<link rel="stylesheet" href="../select/select2-4.0.3/css/select2.css">
 </head>
 <body>
-<div>
-	<a href="#" id="department">选择部门</a>
-</div>
+
 <div class="row">
 	<div class="panel-body" style="padding-bottom:0px;">
 		<div class="panel panel-default">
@@ -26,6 +24,11 @@
 						<label class="control-label col-sm-1" for="txt_search_statu">条件2</label>
 						<div class="col-sm-3">
 							<input type="text" class="form-control" id="txt_search_statu">
+						</div>
+						<div class="col-sm-3">
+							<select  class="form-control" id="text">
+								<option value="请选择">请选择</option>
+							</select>
 						</div>
 						<div class="col-sm-4" style="text-align:left;">
 							<button type="button" style="margin-left:50px" id="btn_query" name="refresh" class="btn btn-primary">查询</button>
