--- a/plugintest/video/videojs.html
+++ b/plugintest/video/videojs.html
@@ -28,7 +28,7 @@
     $('#startplaybtn').click(function () {
 
         myPlayer.ready(function() {
-          myPlayer.src("src/protect.mp4");
+          myPlayer.src("src/ceshi.avi");
           myPlayer.play();
           myPlayer.on("durationchange", function() {
             console.log('durationchange')
@@ -65,7 +65,7 @@
       // 如果 currentTime() === duration()，则视频已播放完毕
       if (myPlayer.duration() != 0 && myPlayer.currentTime() === myPlayer.duration()) {
         // 播放结束
-        alert('播放结束')
+        //alert('播放结束')
 
       }
     }
