1增加vlcplaydemo增加canvas绘图demo

--- a/bootstraptest/carousel.html
+++ b/bootstraptest/carousel.html
@@ -57,6 +57,11 @@
 		<li data-target="#car1" data-slide-to="3"></li>
 	</ul>
 </div>
+<div>
+	<a href="./../plugintest/video/vlc_play.html">vlc play</a>
+
+</div>
+
 <script src="../src/bootstrap/js/jquery-1.11.3.js"></script>
 <script src="../src/bootstrap/js/bootstrap.min.js"></script>
 </body>
