--- a/bootstraptest/carousel.html
+++ b/bootstraptest/carousel.html
@@ -58,7 +58,7 @@
 	</ul>
 </div>
 <div>
-	<a href="./../plugintest/video/vlc_play.html">vlc play</a>
+	<a href="../plugintest/VLC/vlc_play.html">vlc play</a>
 
 </div>
 
