--- a/plugintest/VLC/vlc_play.html
+++ b/plugintest/VLC/vlc_play.html
@@ -122,7 +122,7 @@
 </div>
 
 <div>
-	<a href="./../../bootstraptest/carousel.html">返回ie11</a>
+	<a href="../../bootstraptest/carousel.html">返回ie11</a>
 </div>
 </body>
 </html>
