--- a/plugintest/VLC/complex.html
+++ b/plugintest/VLC/complex.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head> 
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
+<!-- <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+ --><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 <title>VLC Plugin test page</TITLE>
 <style>
   .inputTrackerInput {
