增加ES6常用语法demo

--- a/ES6/threePoint.html
+++ b/ES6/threePoint.html
@@ -37,7 +37,7 @@
     console.log(a+'console1');
     console.log(a1+'console2');
     push(a,...b);
-    console.log(a+'console3');
+    console.log(a+'console3'); //[{id:'1'},{id:'2'},{id:'3'},{id:'w'},{id:'e'},{id:'r'}]
 	</script>
 </body>
 </html>
