--- a/ES6/threePoint.html
+++ b/ES6/threePoint.html
@@ -16,7 +16,7 @@
     // 1 2 3
     console.log(1, ...[2, 3, 4], 5)
     // 1 2 3 4 5
-    console.log([...document.querySelectorAll('div')])
+    console.log([...document.querySelectorAll('div')]);
     // [<div>, <div>, <div>]
 
     function add(x, y) {
