--- a/plugintest/VLC/vedio_play.html
+++ b/plugintest/VLC/vedio_play.html
@@ -1,7 +1,6 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<!-- <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
- -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>视频剪辑</title>
 <style type="text/css">
