增加完善测试demo

--- a/bootstraptest/modal/modal_drag.html
+++ b/bootstraptest/modal/modal_drag.html
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" style="top:auto;right: auto;bottom:20px;left:420px" id="case_list_panel" role="dialog" aria-labelledby="myModalLabel"  data-backdrop="static">
+  <div class="modal fade" id="case_list_panel" role="dialog" aria-labelledby="myModalLabel"  data-backdrop="static">
     <div class="modal-dialog" role="document" style="width:300px;position: fixed;bottom:20px;left:420px">
       <div class="modal-content">
         <div class="modal-header" style="background: #237ae5; border-radius: 4px 4px 0px 0px;">
