--- a/plugintest/VLC/basic.html
+++ b/plugintest/VLC/basic.html
@@ -19,10 +19,10 @@
 function checkBrowser(){
 	var is=isInsalledIEVLC()
 	if(is){
-		alert('this is vlcObj')
+		//alert('this is vlcObj')
 	}
 	else{
-	alert('this is not vlc')
+	//alert('this is not vlc')
 	}
 }
 
