--- a/plugintest/video/videojs_noControl.html
+++ b/plugintest/video/videojs_noControl.html
@@ -30,7 +30,7 @@
     $('#startplaybtn').click(function () {
 
         myPlayer.ready(function() {
-          myPlayer.src("src/ceshi.avi");
+          myPlayer.src("src/xndp1.mp4");
           myPlayer.play();
           myPlayer.on("durationchange", function() {
             console.log('durationchange')
