增加日历插件

--- a/plugintest/canvaspaint/mulitPhotoSaveToImage.html
+++ b/plugintest/canvaspaint/mulitPhotoSaveToImage.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>画板实验</title>
+	<title>图片合并</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style type="text/css">
