--- a/plugintest/video/avi_play.html
+++ b/plugintest/video/avi_play.html
@@ -10,5 +10,11 @@
 	<param name="autostart" value="true" />
 	<param name="controller" value="true" />
 </object>
+
+<!--<object type="video/x-msvideo" data="./src/test11.mp3"  width="320" height="240">
+	<param name="src"value="video.avi" />
+	<param name="autostart" value="true" />
+	<param name="controller" value="true" />
+</object>-->
 </body>
 </html>
